--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "@nestjs/common": "^10.3.7",
     "@nestjs/core": "^10.3.7",
+    "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.3.7",
+    "mongoose": "^8.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
