--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.7",
+    "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.3.7",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.3.7",
