--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
